overlays/primary/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: downloaders
---
apiVersion: v1
kind: Namespace
metadata:
  name: openebs
---
apiVersion: v1
kind: Namespace
metadata:
  name: managers
---
apiVersion: v1
kind: Namespace
metadata:
  name: utils
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
